--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "prepare": "npx husky install"
   },
   "dependencies": {
+    "@vant/area-data": "^1.5.1",
     "@vant/touch-emulator": "^1.4.0",
     "@vant/use": "^1.6.0",
     "axios": "^1.6.0",
     "echarts": "^5.4.3",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
