--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "echarts": "^5.4.3",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
